changed bio added new weekly class: revive tooting bec

--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
         <div class="modal-content swirls">
           <div class="text-container">
             <h1 class="margin-l-bottom"><span class="close1">&times;</span>Hello! Welcome to my Yoga website</h1>
-            <p class"margin-l-bottom">I first began my interest in yoga and movement whilst I was training to be an actor. For me yoga started as a way of waking up, warming up, and getting my body, brain and breath ready to rehearse. Before I knew it I was practicing every day and loving it - so I thought it was about time I trained and started teaching too!</p>
+            <p class"margin-l-bottom">I was first introduced to yoga and movement work whilst training at drama school to be an actor. I found yoga a fab way of warming up, and getting my body, brain and breath ready to rehearse. But soon it started trickling into my life in general and I was practicing every day - so I thought it was about time I trained and started teaching too!</p>
 
-            <p>I trained in South Goa, India, and have returned there for an internship to further my training and practice.</p>
+            <p>I trained at Sampoorna Yoga in South Goa, India, and have returned there for an internship to further my training and practice. I have also attended workshops in anatomy, and later this year will be completing my 500 hour advanced teacher training with Jason Crandell.</p>
 
-            <p>I love yoga because is accessible to all and it is a practical way to see how we each develop in our own special ways. Some people will be awesome at backbends, others rock at arm balances whilst some are wizards of the mind and meditation. It's like everyone’s their own special kind of superhero, you just need to take the time to see it – which kind are you? </p>
+            <p>I love yoga because is accessible to all and it is a practical way to see how we each develop in our own special ways. Some people will be awesome at backbends, others rock at arm balances whilst some are wizards of the mind and meditation. It's like everyone’s their own special kind of superhero, you just need to take the time to see it – which kind are you?</p>
+
+            <p>Trained primarily in vinyasa and ashtanga - my classes have a strong focus on movement and flow. Expect a strong class, often with long creative sequences and occasional 360 mandala-style rotations around the mat. And of course a fair amount of sweat.</p>
+
+            <p>Come get into your body with me!</p>
 
             <ul class="about-list">
               <li>I teach a number of regular weekly classes around London and am also available for one-to-one private sessios, group classes, corporate hire.</li>
@@ -100,7 +104,7 @@
                     </li>
                     <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
                       <ul class="timings-list">
-                        <li>5pm - 6pm dynamic yoga</li>
+                        <li>5pm - 6pm Dynamic yoga</li>
                       </ul>
                     </li>
                     <li class="no-bullet-point"><p class="day-of-week">Friday</p>
@@ -115,7 +119,7 @@
                     </li>
                     <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
                       <ul class="timings-list">
-                        <li>4:30pm - 5:45pm Hatha yoga</li>
+                        <li>4:30pm - 5:45pm Beginners yoga</li>
                       </ul>
                     </li>
                   </ul>
@@ -128,12 +132,12 @@
             <div class="card">
               <div class="card-header" id="headingThree">
                 <h5 class="mb-0">
-                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     Tooting Bec Lido
                   </button>
                 </h5>
               </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <p class="margin-s-left margin-s-top">Drop in price for SLSC members £5 non-members £8</p>
                 <div class="card-body about-list swirls">
                   <div id="tooting-image"></div>
@@ -159,6 +163,32 @@
                 </div>
               </div>
             </div>
+
+            <div class="card">
+              <div class="card-header" id="headingThree">
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Revive Tooting Bec
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                <p class="margin-s-left margin-s-top"><a href="www.reviveyogatooting.co.uk">Book here</a></p>
+                <div class="card-body about-list swirls">
+                  <div id="matchstick-image"></div>
+                  <ul class="inline-b v-align margin-l-left quarter-width">
+                    <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
+                      <ul>
+                        <li>6:45pm - 7:45pm Vinyasa yoga</li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <div id="map-revive"></div>
+                  <div class="clearfix"></div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
@@ -174,11 +204,15 @@
         <!-- ABOUT -->
         <div class="mobile-container">
           <h1 class="margin-l-bottom">Hello! Welcome to my Yoga website</h1>
-          <p class"margin-l-bottom">I first began my interest in yoga and movement whilst I was training to be an actor. For me yoga started as a way of waking up, warming up, and getting my body, brain and breath ready to rehearse. Before I knew it I was practicing every day and loving it - so I thought it was about time I trained and started teaching too!</p>
+          <p class"margin-l-bottom">I was first introduced to yoga and movement work whilst training at drama school to be an actor. I found yoga a fab way of warming up, and getting my body, brain and breath ready to rehearse. But soon it started trickling into my life in general and I was practicing every day - so I thought it was about time I trained and started teaching too!</p>
 
-          <p>I trained in South Goa, India, and have returned there for an internship to further my training and practice.</p>
+          <p>I trained at Sampoorna Yoga in South Goa, India, and have returned there for an internship to further my training and practice. I have also attended workshops in anatomy, and later this year will be completing my 500 hour advanced teacher training with Jason Crandell.</p>
 
-          <p>I love yoga because is accessible to all and it is a practical way to see how we each develop in our own special ways. Some people will be awesome at backbends, others rock at arm balances whilst some are wizards of the mind and meditation. It's like everyone’s their own special kind of superhero, you just need to take the time to see it – which kind are you? </p>
+          <p>I love yoga because is accessible to all and it is a practical way to see how we each develop in our own special ways. Some people will be awesome at backbends, others rock at arm balances whilst some are wizards of the mind and meditation. It's like everyone’s their own special kind of superhero, you just need to take the time to see it – which kind are you?</p>
+
+          <p>Trained primarily in vinyasa and ashtanga - my classes have a strong focus on movement and flow. Expect a strong class, often with long creative sequences and occasional 360 mandala-style rotations around the mat. And of course a fair amount of sweat.</p>
+
+          <p>Come get into your body with me!</p>
 
           <ul class="about-list">
             <li>I teach a number of regular weekly classes around London and am also available for one-to-one private sessios, group classes, corporate hire.</li>
@@ -233,7 +267,7 @@
                 </li>
                 <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
                   <ul class="timings-list">
-                    <li>5pm - 6pm dynamic yoga</li>
+                    <li>5pm - 6pm Dynamic yoga</li>
                   </ul>
                 </li>
                 <li class="no-bullet-point"><p class="day-of-week">Friday</p>
@@ -248,7 +282,7 @@
                 </li>
                 <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
                   <ul class="timings-list">
-                    <li>4:30pm - 5:45pm Hatha yoga</li>
+                    <li>4:30pm - 5:45pm Beginners yoga</li>
                   </ul>
                 </li>
               </ul>
@@ -282,6 +316,23 @@
               <!-- <div id="map-tooting"></div> -->
             </div>
           </div>
+
+          <div>
+            <h5 class="bold">Revive Tooting Bec</h5>
+            <p class="margin-s-left margin-s-top"><a href="www.reviveyogatooting.co.uk">Book here</a></p>
+            <div class="about-list swirls">
+              <ul class="inline-b v-align margin-l-left">
+                <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
+                  <ul class="timings-list">
+                    <li>6:45pm - 7:45pm Vinyasa yoga</li>
+                  </ul>
+                </li>
+              </ul>
+              <p>Find it online <a href="https://www.google.com/maps/place/Revive/@51.4372209,-0.1570409,15z/data=!4m2!3m1!1s0x0:0x3bbf8bbd8fcc94b0?ved=2ahUKEwjGxdW-zuvfAhUwTxUIHWulBPYQ_BIwDXoECAYQCA">here</a></p>
+              <!-- <div id="map-tooting"></div> -->
+            </div>
+          </div>
+
         </div>
         </div>
       </div>
