added https to anchor and changed map values

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </h5>
               </div>
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                <p class="margin-s-left margin-s-top"><a href="www.reviveyogatooting.co.uk">Book here</a></p>
+                <p class="margin-s-left margin-s-top"><a href="https://www.reviveyogatooting.co.uk/">Book here</a></p>
                 <div class="card-body about-list swirls">
                   <div id="matchstick-image"></div>
                   <ul class="inline-b v-align margin-l-left quarter-width">
@@ -329,7 +329,6 @@
                 </li>
               </ul>
               <p>Find it online <a href="https://www.google.com/maps/place/Revive/@51.4372209,-0.1570409,15z/data=!4m2!3m1!1s0x0:0x3bbf8bbd8fcc94b0?ved=2ahUKEwjGxdW-zuvfAhUwTxUIHWulBPYQ_BIwDXoECAYQCA">here</a></p>
-              <!-- <div id="map-tooting"></div> -->
             </div>
           </div>
 
