copy change for booking link revive classes

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </h5>
               </div>
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                <p class="margin-s-left margin-s-top"><a href="https://www.reviveyogatooting.co.uk/">Book here</a></p>
+                <p class="margin-s-left margin-s-top">Book classes at <a href="https://www.reviveyogatooting.co.uk/">www.reviveyogatooting.co.uk/</a></p>
                 <div class="card-body about-list swirls">
                   <div id="matchstick-image"></div>
                   <ul class="inline-b v-align margin-l-left quarter-width">
@@ -319,7 +319,7 @@
 
           <div>
             <h5 class="bold">Revive Tooting Bec</h5>
-            <p class="margin-s-left margin-s-top"><a href="www.reviveyogatooting.co.uk">Book here</a></p>
+            <p class="margin-s-left margin-s-top">Book classes at <a href="https://www.reviveyogatooting.co.uk/">www.reviveyogatooting.co.uk</a></p>
             <div class="about-list swirls">
               <ul class="inline-b v-align margin-l-left">
                 <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
