--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <p>I trained at Sampoorna Yoga in South Goa, India, and have returned there for an internship to further my training and practice. I have also attended workshops in anatomy, and later this year will be completing my 500 hour advanced teacher training with Jason Crandell.</p>
 
-            <p>I love yoga because is accessible to all and it is a practical way to see how we each develop in our own special ways. Some people will be awesome at backbends, others rock at arm balances whilst some are wizards of the mind and meditation. It's like everyone’s their own special kind of superhero, you just need to take the time to see it – which kind are you?</p>
+            <p>I love yoga because it is accessible to all and it is a practical way to see how we each develop in our own special ways. Some people will be awesome at backbends, others rock at arm balances whilst some are wizards of the mind and meditation. It's like everyone’s their own special kind of superhero, you just need to take the time to see it – which kind are you?</p>
 
             <p>Trained primarily in vinyasa and ashtanga - my classes have a strong focus on movement and flow. Expect a strong class, often with long creative sequences and occasional 360 mandala-style rotations around the mat. And of course a fair amount of sweat.</p>
 
@@ -208,7 +208,7 @@
 
           <p>I trained at Sampoorna Yoga in South Goa, India, and have returned there for an internship to further my training and practice. I have also attended workshops in anatomy, and later this year will be completing my 500 hour advanced teacher training with Jason Crandell.</p>
 
-          <p>I love yoga because is accessible to all and it is a practical way to see how we each develop in our own special ways. Some people will be awesome at backbends, others rock at arm balances whilst some are wizards of the mind and meditation. It's like everyone’s their own special kind of superhero, you just need to take the time to see it – which kind are you?</p>
+          <p>I love yoga because it is accessible to all and it is a practical way to see how we each develop in our own special ways. Some people will be awesome at backbends, others rock at arm balances whilst some are wizards of the mind and meditation. It's like everyone’s their own special kind of superhero, you just need to take the time to see it – which kind are you?</p>
 
           <p>Trained primarily in vinyasa and ashtanga - my classes have a strong focus on movement and flow. Expect a strong class, often with long creative sequences and occasional 360 mandala-style rotations around the mat. And of course a fair amount of sweat.</p>
 
