added classes and removed some

--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
                     <li class="no-bullet-point"><p class="day-of-week">Monday</p>
                       <ul class="timings-list">
                         <li>7am - 8am dynamic Hatha</li>
-                        <li>8:15am - 9:15am Hatha yoga</li>
                       </ul>
                     </li>
                     <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
@@ -108,11 +107,6 @@
                     <li class="no-bullet-point"><p class="day-of-week">Friday</p>
                       <ul class="timings-list">
                         <li>9:30am - 10:45am Hatha yoga</li>
-                      </ul>
-                    </li>
-                    <li class="no-bullet-point"><p class="day-of-week">Saturday</p>
-                      <ul class="timings-list">
-                        <li>3:30pm - 4:45pm Hatha yoga</li>
                       </ul>
                     </li>
                     <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
@@ -140,6 +134,16 @@
                 <div class="card-body about-list swirls">
                   <div id="tooting-image"></div>
                   <ul class="inline-b v-align margin-l-left quarter-width">
+                    <li class="no-bullet-point"><p class="day-of-week">Monday</p>
+                      <ul>
+                        <li>6:45pm - 7:45pm Beginners yoga</li>
+                      </ul>
+                    </li>
+                    <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
+                      <ul>
+                        <li>7am - 8am Vinyasa yoga</li>
+                      </ul>
+                    </li>
                     <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
                       <ul>
                         <li>6:45pm - 7:45pm Candlelit vinyasa yoga</li>
@@ -175,6 +179,11 @@
                 <div class="card-body about-list swirls">
                   <div id="matchstick-image"></div>
                   <ul class="inline-b v-align margin-l-left quarter-width">
+                    <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
+                      <ul>
+                        <li>9am - 10am Dynamic yoga</li>
+                      </ul>
+                    </li>
                     <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
                       <ul>
                         <li>6:45pm - 7:45pm Vinyasa yoga</li>
@@ -253,7 +262,6 @@
                 <li class="no-bullet-point"><p class="day-of-week">Monday</p>
                   <ul class="timings-list">
                     <li>7am - 8am dynamic Hatha</li>
-                    <li>8:15am - 9:15am Hatha yoga</li>
                   </ul>
                 </li>
                 <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
@@ -269,11 +277,6 @@
                 <li class="no-bullet-point"><p class="day-of-week">Friday</p>
                   <ul class="timings-list">
                     <li>9:30am - 10:45am Hatha yoga</li>
-                  </ul>
-                </li>
-                <li class="no-bullet-point"><p class="day-of-week">Saturday</p>
-                  <ul class="timings-list">
-                    <li>3:30pm - 4:45pm Hatha yoga</li>
                   </ul>
                 </li>
                 <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
@@ -292,6 +295,16 @@
             <p class="margin-s-left margin-s-top">Drop in price for SLSC members £5, non-members £8</p>
             <div class="about-list swirls">
               <ul class="inline-b v-align margin-l-left">
+                <li class="no-bullet-point"><p class="day-of-week">Monday</p>
+                  <ul class="timings-list">
+                    <li>6:45pm - 7:45pm Beginners yoga</li>
+                  </ul>
+                </li>
+                <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
+                  <ul class="timings-list">
+                    <li>7am - 8am Vinyasa yoga</li>
+                  </ul>
+                </li>
                 <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
                   <ul class="timings-list">
                     <li>6:45pm - 7:45pm Candlelit vinyasa yoga</li>
@@ -318,6 +331,11 @@
             <p class="margin-s-left margin-s-top">Book classes at <a href="https://www.reviveyogatooting.co.uk/">www.reviveyogatooting.co.uk</a></p>
             <div class="about-list swirls">
               <ul class="inline-b v-align margin-l-left">
+                <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
+                  <ul class="timings-list">
+                    <li>9am - 10am Dynamic yoga</li>
+                  </ul>
+                </li>
                 <li class="no-bullet-point"><p class="day-of-week">Sunday</p>
                   <ul class="timings-list">
                     <li>6:45pm - 7:45pm Vinyasa yoga</li>
