--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   <ul class="inline-b v-align margin-l-left quarter-width">
                     <li class="no-bullet-point"><p class="day-of-week">Monday</p>
                       <ul>
-                        <li>6:45pm - 7:45pm Beginners yoga</li>
+                        <li>6:45pm - 7:45pm SlowFlow yoga</li>
                       </ul>
                     </li>
                     <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
@@ -179,6 +179,11 @@
                 <div class="card-body about-list swirls">
                   <div id="matchstick-image"></div>
                   <ul class="inline-b v-align margin-l-left quarter-width">
+                    <li class="no-bullet-point"><p class="day-of-week">Monday</p>
+                      <ul>
+                        <li>8:15pm - 9:15pm Dynamic yoga</li>
+                      </ul>
+                    </li>
                     <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
                       <ul>
                         <li>9am - 10am Dynamic yoga</li>
@@ -297,7 +302,7 @@
               <ul class="inline-b v-align margin-l-left">
                 <li class="no-bullet-point"><p class="day-of-week">Monday</p>
                   <ul class="timings-list">
-                    <li>6:45pm - 7:45pm Beginners yoga</li>
+                    <li>6:45pm - 7:45pm SlowFlow yoga</li>
                   </ul>
                 </li>
                 <li class="no-bullet-point"><p class="day-of-week">Wednesday</p>
@@ -331,6 +336,11 @@
             <p class="margin-s-left margin-s-top">Book classes at <a href="https://www.reviveyogatooting.co.uk/">www.reviveyogatooting.co.uk</a></p>
             <div class="about-list swirls">
               <ul class="inline-b v-align margin-l-left">
+                <li class="no-bullet-point"><p class="day-of-week">Monday</p>
+                  <ul class="timings-list">
+                    <li>8:15pm - 9:15pm Dynamic yoga</li>
+                  </ul>
+                </li>
                 <li class="no-bullet-point"><p class="day-of-week">Thursday</p>
                   <ul class="timings-list">
                     <li>9am - 10am Dynamic yoga</li>
