--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                       </ul>
                     </li>
                   </ul>
-                  <div id="map-matchstick"></div>
+                  <div id="map-revive"></div>
                   <div class="clearfix"></div>
                 </div>
               </div>
