change background image and position of modal buttons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     	</div>
 
       <div id="aboutModal" class="modal">
-        <div class="modal-content swirls">
+        <div class="modal-content">
           <div class="text-container">
             <h1 class="margin-l-bottom"><span class="close1">&times;</span>Hello! Welcome to my Yoga website</h1>
             <p class"margin-l-bottom">I was first introduced to yoga and movement work whilst training at drama school to be an actor. I found yoga a fab way of warming up, and getting my body, brain and breath ready to rehearse. But soon it started trickling into my life in general and I was practicing every day - so I thought it was about time I trained and started teaching too!</p>
@@ -50,7 +50,7 @@
       </div>
 
       <div id="contactModal" class="modal">
-        <div class="modal-content contact-modal swirls">
+        <div class="modal-content contact-modal">
           <div class="contact-container">
           <h1><span class="close2">&times;</span>Contact</h1>
 
@@ -86,7 +86,7 @@
               </div>
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                 <p class="margin-s-left margin-s-top">Book classes at <a href="https://batterseayoga.com/">https://batterseayoga.com/</a></p>
-                <div class="card-body about-list swirls">
+                <div class="card-body about-list">
                   <div id="tooting-image"></div>
                   <ul class="inline-b v-align margin-l-left">
                     <li class="no-bullet-point"><p class="day-of-week">Monday</p>
@@ -131,7 +131,7 @@
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <p class="margin-s-left margin-s-top">Drop in price for SLSC members £5 non-members £8</p>
-                <div class="card-body about-list swirls">
+                <div class="card-body about-list">
                   <div id="tooting-image"></div>
                   <ul class="inline-b v-align margin-l-left quarter-width">
                     <li class="no-bullet-point"><p class="day-of-week">Monday</p>
@@ -176,7 +176,7 @@
               </div>
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                 <p class="margin-s-left margin-s-top">Book classes at <a href="https://www.reviveyogatooting.co.uk/">www.reviveyogatooting.co.uk/</a></p>
-                <div class="card-body about-list swirls">
+                <div class="card-body about-list">
                   <div id="matchstick-image"></div>
                   <ul class="inline-b v-align margin-l-left quarter-width">
                     <li class="no-bullet-point"><p class="day-of-week">Monday</p>
@@ -262,7 +262,7 @@
           <div>
             <h5 class="bold">Battersea Yoga</h5>
             <p class="margin-s-left margin-s-top">Book classes at <a href="https://batterseayoga.com/">https://batterseayoga.com/</a></p>
-            <div class="about-list swirls">
+            <div class="about-list">
               <ul class="inline-b v-align margin-l-left">
                 <li class="no-bullet-point"><p class="day-of-week">Monday</p>
                   <ul class="timings-list">
@@ -298,7 +298,7 @@
           <div>
             <h5 class="bold">Tooting Bec Lido</h5>
             <p class="margin-s-left margin-s-top">Drop in price for SLSC members £5, non-members £8</p>
-            <div class="about-list swirls">
+            <div class="about-list">
               <ul class="inline-b v-align margin-l-left">
                 <li class="no-bullet-point"><p class="day-of-week">Monday</p>
                   <ul class="timings-list">
@@ -334,7 +334,7 @@
           <div>
             <h5 class="bold">Revive Tooting Bec</h5>
             <p class="margin-s-left margin-s-top">Book classes at <a href="https://www.reviveyogatooting.co.uk/">www.reviveyogatooting.co.uk</a></p>
-            <div class="about-list swirls">
+            <div class="about-list">
               <ul class="inline-b v-align margin-l-left">
                 <li class="no-bullet-point"><p class="day-of-week">Monday</p>
                   <ul class="timings-list">
